# src/dtos/createProviderDto.ts
@@ -1,0 +1,31 @@
+import {IsDateString, IsNotEmpty, IsString } from "class-validator";
+import { ApiProperty } from "@nestjs/swagger";
+
+export class CreateProviderDto {
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsString()
+  name: string;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsString()
+  address: string;
+
+  @ApiProperty()
+  @IsDateString()
+  existsSince: string;
+
+  @ApiProperty()
+  @IsDateString()
+  validFrom: string;
+
+  @ApiProperty()
+  @IsDateString()
+  validUntil: string;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsString()
+  masterAgreementType: string;
+}
