# swagger.json
@@ -160,6 +160,54 @@
                     "authentication"
                 ]
             }
+        },
+        "/auth/provider/signup": {
+            "post": {
+                "operationId": "AuthProviderController_signup",
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ProviderSignupDto"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "authentication-provider"
+                ]
+            }
+        },
+        "/auth/provider/signin": {
+            "post": {
+                "operationId": "AuthProviderController_signin",
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/SigninDto"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "authentication-provider"
+                ]
+            }
         }
     },
     "info": {
@@ -288,6 +336,45 @@
                 "required": [
                     "email",
                     "password"
+                ]
+            },
+            "ProviderSignupDto": {
+                "type": "object",
+                "properties": {
+                    "email": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "address": {
+                        "type": "string"
+                    },
+                    "existsSince": {
+                        "type": "string"
+                    },
+                    "validFrom": {
+                        "type": "string"
+                    },
+                    "validUntil": {
+                        "type": "string"
+                    },
+                    "masterAgreementType": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "email",
+                    "password",
+                    "name",
+                    "address",
+                    "existsSince",
+                    "validFrom",
+                    "validUntil",
+                    "masterAgreementType"
                 ]
             }
         }
